[package]
name = "yata-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lance-core = { path = "../lance-core" }
lance-encoding = { path = "../lance-encoding", default-features = false }
lance-io = { path = "../lance-io", default-features = false }
arrow-array.workspace = true
arrow-schema.workspace = true
bytes.workspace = true
futures = "0.3"
prost.workspace = true
prost-types.workspace = true
object_store.workspace = true
async-trait.workspace = true
tokio = { version = "1.23", features = ["sync", "macros", "rt", "time"] }

[build-dependencies]
prost-build.workspace = true
